<resources>
    <string name="app_name">Great Cipher</string>
    <string name="enter_text">Enter a text</string>
    <string name="caesar">Caesar</string>
    <string name="playfair">Playfair</string>
    <string name="transposition">Transposition</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="copy_result">Copy result</string>
    <string name="paste_result">Paste result</string>
    <string name="enter_key">Enter key</string>
    <string name="select_cipher">Select cipher</string>
    <string name="choose_a_cipher">Caesar Cipher</string>
</resources>