<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/cipher_type_text_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/four_corner_background"
            android:backgroundTint="@color/gray"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/choose_a_cipher"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/result_cv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_margin="@dimen/_12sdp"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cipher_type_text_tv">

            <TextView
                android:id="@+id/result_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:gravity="center"
                android:padding="@dimen/_25sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                tools:text="Test text" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/key_input_layout"
            style="@style/roundInputTextField"
            android:hint="@string/enter_key"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_cv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/key_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/roundInputTextField"
            android:hint="@string/enter_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/key_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/encrypt_btn"
            style="@style/roundButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:text="@string/encrypt"
            app:layout_constraintEnd_toStartOf="@+id/decrypt_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

        <Button
            android:id="@+id/decrypt_btn"
            style="@style/roundButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:text="@string/decrypt"
            app:layout_constraintBottom_toBottomOf="@+id/encrypt_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/encrypt_btn"
            app:layout_constraintTop_toTopOf="@+id/encrypt_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
